--- a/index.html
+++ b/index.html
@@ -27,10 +27,12 @@
             </div>
         </header>
 
-        <section class="middle">
-            
-            <main>Main</main>
-            
+        <section class="middle">            
+            <div class="gallery">
+                <div class="image-1">
+
+                </div>
+            </div>
         </section>
 
         <footer>Footer</footer>
