--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en">|   
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -29,9 +29,13 @@
 
         <section class="middle">            
             <div class="gallery">
-                <div class="image-1">
-
-                </div>
+                <img src="./img/descarga.png" alt="">
+                <img src="./img/descarga.png" alt="">
+                <img src="./img/descarga.png" alt="">
+                <img src="./img/descarga.png" alt="">            
+                <img src="./img/descarga.png" alt="">            
+                <img src="./img/descarga.png" alt="">            
+                <img src="./img/descarga.png" alt="">            
             </div>
         </section>
 
