--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
 
         <section class="middle">            
             <div class="gallery">
-                <img src="./img/descarga.png" alt="">
-                <img src="./img/descarga.png" alt="">
-                <img src="./img/descarga.png" alt="">
-                <img src="./img/descarga.png" alt="">            
-                <img src="./img/descarga.png" alt="">            
-                <img src="./img/descarga.png" alt="">            
-                <img src="./img/descarga.png" alt="">            
+                <img class='gallery_poke' src="./img/descarga.png" alt="">
+                <img class='gallery_poke' src="./img/descarga.png" alt="">
+                <img class='gallery_poke' src="./img/descarga.png" alt="">
+                <img class='gallery_poke' src="./img/descarga.png" alt="">            
+                <img class='gallery_poke' src="./img/descarga.png" alt="">            
+                <img class='gallery_poke' src="./img/descarga.png" alt="">            
+                <img class='gallery_poke' src="./img/descarga.png" alt="">            
             </div>
         </section>
 
