--- a/index.html
+++ b/index.html
@@ -10,37 +10,37 @@
 <body>
     <div class="wrapper">
         <header>
-            <div class="menu-left">
+            <div class="menu-left" id="menu_left">
                 <ul class="list_menu_left">
-                    <li class="c_list">Home</li>
-                    <li class="c_list">News</li>                    
+                    <li class="c_list" id="home_menu">Home</li>
+                    <li class="c_list" id="news_menu">News</li>                    
                 </ul>                
             </div>
             <div class="logo_center">
-                <img class="logo" src="./img/dlf.pt-poliwrath-png-454758.png" alt="">
+                <img class="logo" id="logo" src="./img/dlf.pt-poliwrath-png-454758.png" alt="">
             </div>
-            <div class="menu-right">
+            <div class="menu-right" id="menu_right">
                 <ul class="list_menu_left">
-                    <li class="c_list">Trivia</li>
-                    <li class="c_list">About Us</li>                    
+                    <li class="c_list" id="trivia_menu">Trivia</li>
+                    <li class="c_list" id="about_menu">About Us</li>                    
                 </ul> 
             </div>
         </header>
 
-        <section class="middle">            
-            <div class="gallery">
-                <img class='gallery_poke' src="./img/descarga.png" alt="">
-                <img class='gallery_poke' src="./img/descarga.png" alt="">
-                <img class='gallery_poke' src="./img/descarga.png" alt="">
-                <img class='gallery_poke' src="./img/descarga.png" alt="">            
-                <img class='gallery_poke' src="./img/descarga.png" alt="">            
-                <img class='gallery_poke' src="./img/descarga.png" alt="">            
-                <img class='gallery_poke' src="./img/descarga.png" alt="">            
+        <section class="middle" id="middle">            
+            <div class="gallery" id="gallery>
+                <img class='gallery_poke' src="./img/descarga.png" alt="" onclick="max_imgData()">
+                <img class='gallery_poke' src="./img/descarga.png" alt="" onclick="max_imgData()">
+                <img class='gallery_poke' src="./img/descarga.png" alt="" onclick="max_imgData()">
+                <img class='gallery_poke' src="./img/descarga.png" alt="" onclick="max_imgData()">            
+                <img class='gallery_poke' src="./img/descarga.png" alt="" onclick="max_imgData()">            
+                <img class='gallery_poke' src="./img/descarga.png" alt="" onclick="max_imgData()">            
+                <img class='gallery_poke' src="./img/descarga.png" alt=""onclick="max_imgData()">            
             </div>
         </section>
 
         <footer>Footer</footer>
-
+        <script src="./js/script.js"></script>
     </div>
 </body>
 </html>
