--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </header>
 
         <section class="middle" id="middle">            
-            <div class="gallery" id="gallery>
+            <div class="gallery" id="gallery">
                 <img class='gallery_poke' src="./img/descarga.png" alt="" onclick="max_imgData()">
                 <img class='gallery_poke' src="./img/descarga.png" alt="" onclick="max_imgData()">
                 <img class='gallery_poke' src="./img/descarga.png" alt="" onclick="max_imgData()">
@@ -37,8 +37,11 @@
                 <img class='gallery_poke' src="./img/descarga.png" alt="" onclick="max_imgData()">            
                 <img class='gallery_poke' src="./img/descarga.png" alt=""onclick="max_imgData()">            
             </div>
+            <div class="poke_info" id="poke_info">
+                <img class="poke_img" src="./img/descarga.png" alt="">
+                <button class="btn_aceptar" onclick="backStart()"> ACEPTAR </button>
+            </div>
         </section>
-
         <footer>Footer</footer>
         <script src="./js/script.js"></script>
     </div>
