--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
 
         <section class="middle" id="middle">            
             <div class="gallery" id="gallery">
-                <img class='gallery_poke' src="./img/descarga.png" alt="" onclick="max_imgData()">
-                <img class='gallery_poke' src="./img/descarga.png" alt="" onclick="max_imgData()">
-                <img class='gallery_poke' src="./img/descarga.png" alt="" onclick="max_imgData()">
-                <img class='gallery_poke' src="./img/descarga.png" alt="" onclick="max_imgData()">            
-                <img class='gallery_poke' src="./img/descarga.png" alt="" onclick="max_imgData()">            
-                <img class='gallery_poke' src="./img/descarga.png" alt="" onclick="max_imgData()">            
-                <img class='gallery_poke' src="./img/descarga.png" alt=""onclick="max_imgData()">            
+                <div class="poke">
+                    <img class='gallery_poke' src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/1.png" alt="" onclick="max_imgData()">
+                    <div class="poke-1-data">
+                        <a>Nombre:</a>
+                        <a>bulbasaur</a>
+                    </div>
+                </div>                
             </div>
             <div class="poke_info" id="poke_info">
                 <img class="poke_img" src="./img/descarga.png" alt="">
