--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                 <div class="poke">
                     <img class='gallery_poke' src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/1.png" alt="" onclick="max_imgData()">
                     <div class="poke-1-data">
-                        <a>Nombre:</a>
-                        <a>bulbasaur</a>
+                        <p>Nombre:</p>
+                        <p>bulbasaur</p>
                     </div>
                 </div>                
             </div>
